#==============================================================
#
#  Name: RELEASE_NOTES
#
#  Rem:  This file contains the release notes for ether_ip as
#        pertains to the LCLS release format and procedures.
#
#
#  Auth: 03-Jul-2007, A. Alarcon         (ALARCON)
#  Rev:  dd-mmm-yyyy, Reviewer's Name    (USERNAME)
#--------------------------------------------------------------
#  Mod:
#        24-Jan-2014, M.Cyterski          (CYTERSKI):
#          add release s7plc-R1-0-0
#
#==============================================================
#
R1.1.1: change epics version check to build with epics 7
R1.1.0: First version with Git Workflow.

s7plc-R1-0-0: Initial Tagged Release.